# rust-websearch-mcp

./: .env.example  .gitignore  AGENT.md  Cargo.toml  Cargo.toml.snapshot  LICENSE  QWEN.md  README.md  TODO.md  commit-message.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
config/: config.example.toml
crates/analyzer/: Cargo.toml  build.rs
crates/analyzer/src/: cache.rs  config.rs  lib.rs  model.rs  reranker_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  utils.rs
crates/cli/tests/: cli_test.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/summarizer/: Cargo.toml
crates/summarizer/src/: cache.rs  config.rs  config_test.rs  lib.rs  lib_test.rs
crates/summarizer/tests/: cache_test.rs
crates/utils/: Cargo.toml
crates/utils/src/: env.rs
crates/websearch/: Cargo.toml
crates/websearch/examples/: simple_embedding.rs  test_openai.rs
crates/websearch/src/: formatter.rs  lib.rs  logger.rs
examples/: simple_embedding.rs  test_openai.rs
fixtures/: example_analysis.json  example_document.json
fixtures/core/: analyze_response.json  analyze_response.msgpack  config.json  config.msgpack  document.json  document.msgpack  error.json  error.msgpack  summarize_response.json  summarize_response.msgpack
fixtures/documents/: sample.json
fixtures/html/: test.html
scripts/: serve_test.rs  test_analyzer_cli.sh
src/: config.rs  embedding.rs  formatter.rs  lib.rs  logger.rs  main.rs
