[package]
name = "rust-websearch-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11.8", optional = true }

[features]
default = []
logger = ["env_logger"]
