[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
core = { path = "../core" }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ONNX Runtime for inference
ort = "2.0.0-rc.8"

# Tokenizers for text processing
tokenizers = "0.20"

# HTTP client for downloading models
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Environment variable handling
dotenvy = "0.15"

# File system operations
dirs = "5.0"

# Logging
log = "0.4"

# Path manipulation
path-slash = "0.2"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"