[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"
build = "build.rs" 

[dependencies]
# Kernel dependencies
kernel = { path = "../kernel" }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Embedded database for caching
sled = "0.34"
bincode = "2.0"

# Tokenizers for text processing
tokenizers = "0.20"

# HTTP client for downloading models
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }

# File system operations
dirs = "5.0"

# Logging
log = "0.4"
logger = { path = "../logger" }

# Path manipulation
path-slash = "0.2"

# Error handling
thiserror = "1.0"

# Numerical computing
ndarray = "0.15"

# ONNX Runtime (target-specific)
ort = { version = "2.0.0-rc.8", features = ["load-dynamic"] }

[dev-dependencies]
# Testing utilities
tempfile = "3.0"

[build-dependencies]
# For the build script (Windows): download + unzip a .nupkg (zip)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
zip = "4.5.0"
anyhow = "1"