[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
core = { path = "../core" }
analyzer = { path = "../analyzer" }
summarizer = { path = "../summarizer" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
warp = "0.3"
dotenvy = "0.15.7"
log = "0.4"