[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
core = { path = "../core" }
analyzer = { path = "../analyzer" }
summarizer = { path = "../summarizer" }
websearch = { path = "../websearch" }
logger = { path = "../logger" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenvy = "0.15.7"
log = "0.4"