[package]
name = "summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
logger = { path = "../logger" }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
warp = "0.3"