[package]
name = "websearch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
kernel = { path = "../kernel" }

[[example]]
name = "simple-embedding"
path = "examples/simple_embedding.rs"

[[example]]
name = "test-openai"
path = "examples/test_openai.rs"